# readium-lcp-client

./: .gitignore  LICENSE  MakeHeaders.sh  README.md
include/lcp/: ContainerIterator.h  DefaultFileSystemProvider.h  IAcquistion.h  IAcquistionCallback.h  ICrypto.h  IDecryptionContext.h  IFileSystemProvider.h  ILcpService.h  ILicense.h  ILinks.h  INetProvider.h  IRights.h  IRightsService.h  IStorageProvider.h  IUser.h  IValueIterator.h  Iterator.h  LcpContentFilter.h  LcpContentModule.h  LcpServiceCreator.h  LcpStatus.h  LcpiOSStorageProvider.h  StreamInterfaces.h  lcp.h
include/lcp/apple/: LCPAcquisition.h  LCPError.h  LCPLicense.h  LCPService.h  LCPiOSNetProvider.h  LCPiOSStorageProvider.h  lcp.h
platform/android/: README.md  build.gradle  clean.sh  settings.gradle
platform/android/lcp/: Android.mk  Application.mk  Experimental.mk  Stable.mk  build.gradle  build_experimental.gradle  static_library_dependency_build.gradle
platform/android/lib/: CMakeLists.txt  build.gradle  clientlib.cmake  contentfilter.cmake
platform/android/lib/src/clientlib/cpp/: Acquisition.cpp  Acquisition.h  AcquisitionCallback.cpp  License.cpp  License.h  NetProvider.cpp  NetProvider.h  Service.cpp  StorageProvider.h  Util.h
platform/android/lib/src/clientlib/java/org/readium/sdk/lcp/: Lcp.java  StatusDocumentProcessing.java  StorageProvider.java
platform/android/lib/src/contentfilter/cpp/: CredentialHandler.h  ServiceFactory.cpp  StatusDocumentHandler.h
platform/android/lib/src/contentfilter/java/org/readium/sdk/lcp/: ServiceFactory.java
platform/android/lib/src/main/: AndroidManifest.xml
platform/android/lib/src/main/java/org/readium/sdk/lcp/: Acquisition.java  CredentialHandler.java  DoneCallback.java  Lcp.java  License.java  NetProvider.java  NetProviderCallback.java  Service.java  ServiceFactory.java  StatusDocumentHandler.java  StatusDocumentProcessing.java  StorageProvider.java
platform/apple/: LCP Client (OS X).xcconfig  LCP Client (iOS).xcconfig  LCP Client.xcconfig  xcframework.sh
platform/apple/src/: LCPAcquisition.h  LCPError.h  (+13 more)
platform/cross-platform/: README.md  bootstrap.py  build.py  filenames.gypi  lcp.gyp
platform/windows/: LcpCryptoLib.sln
src/: LcpCryptoLib.sln
src/LcpContentFilter/: LcpContentFilter.cpp  LcpFilterContext.h  LcpSeekableByteStreamAdapter.h
src/LcpCryptoLib/: Acquisition.cpp  Acquisition.h  AesCbcSymmetricAlgorithm.cpp  AesCbcSymmetricAlgorithm.h  AlgorithmNames.cpp  AlgorithmNames.h  BaseDownloadRequest.h  BaseLcpNode.h  CanonicalWriter.h  Certificate.cpp  Certificate.h  CertificateExtension.cpp  CertificateExtension.h  CertificateRevocationList.cpp  CertificateRevocationList.h  CertificateUtils.cpp  CertificateUtils.h  ContainerIterator.h  CrlDistributionPoints.cpp  CrlDistributionPoints.h  CrlUpdater.cpp  CrlUpdater.h  CryptoAlgorithmInterfaces.h  CryptoLcpNode.cpp  CryptoLcpNode.h  CryptoppCryptoProvider.cpp  CryptoppCryptoProvider.h  CryptoppUtils.cpp  CryptoppUtils.h  DateTime.cpp  DateTime.h  DecryptionContextImpl.h  DefaultFileSystemProvider.h  DownloadInFileRequest.h  DownloadInMemoryRequest.h  DownloadRequest.h  EncryptionProfileNames.cpp  EncryptionProfileNames.h  EncryptionProfilesManager.cpp  EncryptionProfilesManager.h  (+59 more)
src/LcpCryptoLibTest/: LcpCryptoLibTest.vcxproj  TestAcquisitionCallback.h  TestNetProvider.h  TestStorageProvider.h  license.lcpl  main.cpp
src/LcpCryptoLibTestTools/: TestAcquisitionCallback.h  TestNetProvider.h  TestStorageProvider.h
src/LcpCryptoLibUnitTest/: AesCbcSymmetricAlgorithmTest.cpp  CertificateTest.cpp  DateTimeTest.cpp  TestUtils.h  main.cpp
src/lcp-client-lib/: Acquisition.cpp  Acquisition.h  AesCbcSymmetricAlgorithm.cpp  AesCbcSymmetricAlgorithm.h  AesGcmSymmetricAlgorithm.cpp  AesGcmSymmetricAlgorithm.h  AlgorithmNames.cpp  AlgorithmNames.h  BaseDownloadRequest.h  BaseLcpNode.h  CanonicalWriter.h  Certificate.cpp  Certificate.h  CertificateExtension.cpp  CertificateExtension.h  CertificateRevocationList.cpp  CertificateRevocationList.h  ContainerIterator.h  CrlDistributionPoints.cpp  CrlDistributionPoints.h  CrlUpdater.cpp  CrlUpdater.h  CryptoAlgorithmInterfaces.h  CryptoLcpNode.cpp  CryptoLcpNode.h  CryptoppCryptoProvider.cpp  CryptoppCryptoProvider.h  CryptoppUtils.cpp  CryptoppUtils.h  DateTime.cpp  DateTime.h  DecryptionContextImpl.h  DownloadInFileRequest.h  DownloadInMemoryRequest.h  EcdsaSha256SignatureAlgorithm.cpp  EcdsaSha256SignatureAlgorithm.h  EncryptionProfileNames.cpp  EncryptionProfileNames.h  EncryptionProfilesManager.cpp  EncryptionProfilesManager.h  (+46 more)
src/lcp-content-filter/: LcpContentFilter.cpp  LcpContentModule.cpp  LcpFilterContext.h  LcpSeekableByteStreamAdapter.h
src/rapidjson/: rapidjson.vcxproj
src/testing-data/: license.lcpl
test/lcp-client-lib/: main.cpp
(+313 files in other folders)
